# Game-of-life

./: .replit  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INPUT  LICENSE  LICENSE.md  README.md  README.txt  SCREENSHOTS  main.py  pyproject.toml
assets/: SCREENSHOTS
gearbox/: __init__.py  readme.md  setup.py  tester.py
